--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Git is awesome</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel neque iste odio quasi unde suscipit praesentium laboriosam repudiandae accusantium omnis.
+    </p>
 </body>
 </html>
